(lang dune 3.17)

(name otor)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Teague Hansen <thanse23@asu.edu")

(maintainers "Teague Hansen <thanse23@asu.edu")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name otor)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
